<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_ava"
            android:layout_width="@dimen/main_avatar_dimen"
            android:layout_height="@dimen/main_avatar_dimen"
            android:layout_marginEnd="@dimen/padding_normal"
            android:layout_marginStart="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher" />

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/main_ava"
            android:layout_toEndOf="@+id/main_ava"
            android:layout_toLeftOf="@+id/pin"
            android:layout_toRightOf="@+id/main_ava"
            android:layout_toStartOf="@+id/pin">

            <TextView
                android:id="@+id/text_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_id_height"
                android:layout_toLeftOf="@+id/day"
                android:layout_toStartOf="@+id/day"
                android:text="@string/id_str" />

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/day_conversion" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/avatar_dimen"
                android:layout_height="@dimen/avatar_dimen"
                android:layout_below="@id/text_id"
                android:layout_marginTop="@dimen/padding_very_small"
                android:contentDescription="@null"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/avatar"
                android:layout_marginLeft="@dimen/padding_very_small"
                android:layout_marginStart="@dimen/padding_very_small"
                android:layout_toEndOf="@+id/avatar"
                android:layout_toRightOf="@+id/avatar"
                android:text="@string/message_title" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/pin"
            android:layout_width="@dimen/pin_image_dimen"
            android:layout_height="@dimen/pin_image_dimen"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/main_ava"
            android:layout_marginEnd="@dimen/padding_small"
            android:layout_marginRight="@dimen/padding_small"
            android:layout_marginTop="@dimen/padding_normal"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/padding_normal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_small"
            android:layout_marginRight="@dimen/padding_small"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dummy_text" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/btn_like_text" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/btn_like_text" />
</FrameLayout>